2006-12-01  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_emi.c: some updates of references in comments. NLC.
      Thanks to Vincent for providing a patch.
      [Msg-Id: <0ac101c71542$ca5d3780$9600a8c0@vince>]
      
2006-11-29  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fixing case-insensitivity for MIME/HTTP header value
      parameters. Thanks to Paul for patch and Enver for review.
      [Msg-Id: <DEF58FCA-6522-47B6-BACB-8C6A46DE6D4B@dsmagic.com>]  

2006-11-27 Andreas Fink <andreas at fink.org>
    * gwlib/list.c: fix mutex locking for gwlist_sort. It was using the wrong
      mutex giving deadlocks if you did gwlist_lock(), gwlist_sort(), gwlist_unlock()

2006-11-23  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fix HTTP/1.1 keep-alive interpreation handling. We need to
      check response headers in addition to HTTP status version to see if
      server/proxy will allow us to act in persistant connection mode.

2006-11-19  Stipe Tolj  <stolj at kannel.org>
    * gw/ota_prov.c: fixing bug #356, where calltype parsing was not right.
      Thanks a lot to Richad Kotal <info@waplikace.cz> for patch.
      
2006-11-19  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fixing bug #368 to support Oracle 10g, via 10.x instant 
      client libs and headers. Thanks to Martin.
    * gw/shared.c: added sqlite3 version output to version preamble, added
      Oracle OCI version output.
   
2006-11-19  Stipe Tolj  <stolj at kannel.org>
	* gw/bearerbox.c: resolves bug #369 by adding warning() calls for 
	  --disable-sms or --disable-wap functions, so users are aware 
	  that the function range is limited. Thanks to Martin for this patch. 
	  Some more source code beauty via indention. NLC.
	  
2006-11-18  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_headers.c: re-adding quote char (") recognizing within the 
      wsp_field_value() that isolates header values. Thanks again to Paul.